# project_translator

./: README.md
docs/: new.txt
src/core/: CMakeLists.txt  task.txt
src/core/helpers/: export_to_onnx.py  requierments.txt
src/core/opus-mt-en-ru/: config.json  generation_config.json
src/core/opus-mt-ru-en/: generation_config.json
src/core/src/: CMakeLists.txt  main.cpp
src/core/src/tokenizer/: tokenizer.cpp  tokenizer.hpp
src/core/src/translator/: translator.cpp  traslator.hpp
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.txt
src/requests/: CMakeLists.txt  CMakeSettings.json  api_keys.json.example  main.cpp  task.txt
src/requests/include/: http_client.hpp  online_translators.hpp  utils.hpp
src/requests/src/: http_client.cpp  online_translators.cpp  utils.cpp
